--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
-  "private": true,
-  "description": "TypeScript template action",
+  "name": "env-loader",
+  "version": "0.0.1",
+  "private": false,
+  "description": "The .env file loader action that can be used in the GitHub workflow",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -15,21 +15,24 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/mixmoe/env-loader"
   },
   "keywords": [
     "actions",
     "node",
-    "setup"
+    "setup",
+    "dotenv"
   ],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.4.0"
+    "@actions/core": "^1.4.0",
+    "dotenv": "^10.0.0"
   },
   "devDependencies": {
-    "@types/node": "^16.4.10",
-    "@typescript-eslint/parser": "^4.29.0",
+    "@types/dotenv": "^8.2.0",
+    "@types/node": "^16.3.3",
+    "@typescript-eslint/parser": "^4.28.3",
     "@vercel/ncc": "^0.29.0",
     "eslint": "^7.32.0",
     "eslint-plugin-github": "^4.1.5",
