:wrench: Add default value `./.env` to `file` param

--- a/action.yml
+++ b/action.yml
@@ -4,9 +4,10 @@ author: 'mixmoe'
 
 inputs:
   file:
-    required: true
+    required: false
     description: 'path to .env file'
-  
+    default: '.env'
+
   mask:
     required: false
     description: 'mask environment variable value'
